--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div> -->
-                <a href="https://docs.google.com/document/d/1baGCKTgM76Vtsqql_Bxn51KCYTjSuOuB1aD6_fd_7Eo/edit?usp=sharing" class="main-btn" arget="_blank" download>
+                <a href="https://docs.google.com/document/d/1ZEGehrCBY1XaUrp2AhYS-UN17wqkWcZV5onU4mUuM68/edit?usp=sharing" class="main-btn" arget="_blank" download>
                     <span class="btn-text">Download CV</span>
                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                 </a>
@@ -50,14 +50,14 @@
                 <div class="left-about">
                     <h4>More About Me</h4>
                     <p>
-                        I’m a frontend developer with 2 years of professional work experience working with JavaScript, React, and HTML/CSS. I specialize in creating responsive and user-friendly web applications that provide seamless user experiences. With a keen eye for detail and a passion for clean code, I strive to deliver high-quality and performant websites. Collaborating effectively with cross-functional teams and staying up to date with the latest front-end trends and best practices, I am dedicated to delivering exceptional results that exceed client expectations.
+                        I’m a front-end developer with 1+ year of professional experience working with JavaScript, React, and HTML/CSS. I bring a dynamic blend of motivation, collaboration, and an unwavering commitment to getting the job done. With a track record of successfully delivering high-quality projects, I thrive in collaborative environments, valuing open communication and teamwork. As I embark on the next step in my career, I am eagerly seeking new junior roles that allow me to contribute my skills and passion while continually expanding my knowledge. With an insatiable appetite for learning, I embrace challenges and embrace opportunities for growth. Let me be the dedicated and adaptable front-end developer your team needs to excel.
                     </p>
                 </div>
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">2+</p>
-                            <p class="small-text">Years of <br /> experience</p>
+                            <p class="large-text">1+</p>
+                            <p class="small-text">Year of <br /> experience</p>
                         </div>
                     </div>     
                     <div class="about-item">
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="progress-bar">
+                    <!-- <div class="progress-bar">
                         <p class="prog-title">Firebase</p>
                         <div class="progress-con">
                             <p class="prog-text">100%</p>
@@ -125,7 +125,7 @@
                                 <span class="firebase"></span>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <h4 class="stat-title">My Timeline</h4>
@@ -134,69 +134,66 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2022 - 2023</p>
-                    <h5>Frontend Developer<span> - Finfast</span></h5>
+                    <p class="tl-duration">Mar 2022 - Nov 2022</p>
+                    <h5>Junior Frontend Developer<span> - Blocverse</span></h5>
                     <p>
-                        - Used markup languages like HTML, CSS and also Javascript libraries to create user-friendly web pages
-                    </p>
-                    <p>
-                        - Assisted back-end developers with coding and troubleshooting
+                        - Collaborated with the UX/UI team to optimize the user experience by implementing intuitive and seamless navigation, interactive elements, and smooth animations.
                     </p>
                     <p>
                         - Used agile delivery methodologies and best practices to deliver new features and products.
                     </p>
                     <p>
-                        -  Determine product requirements and translate them into technical designs
+                        - Determined product requirements and translate them into technical designs
                     </p>
                     <p>
-                        - Conducted user research to inform design decisions, resulting in a 25% decrease in bounce rates
+                        -  Optimized the performance of the frontend code by minimizing file sizes, optimizing images, and improving loading times
                     </p>
                     <p>
-                        - Collaborated with cross-functional teams to develop and implement design systems, reducing design and development time by 20%
+                        - Worked closely with the backend development team, designers, and other stakeholders to ensure smooth integration of frontend and backend functionalities. Regularly communicating progress, challenges, and collaborated on problem-solving.
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2021 - 2022</p>
-                    <h5>Junior Frontend Developer<span> - Unpeep</span></h5>
+                    <p class="tl-duration">Jul 2021 - Dec 2021</p>
+                    <h5>Frontend Developer Intern<span> - Unpeep</span></h5>
                     <p>
-                        - Collaborated with back-end developers and web designers to improve usability
+                        - Collaborate with the design team to transform design mockups into functional user interface using HTML, CSS, and JavaScript. The outcome was a visually appealing and user-friendly interface.
                     </p>
                     <p>
-                        - Got feedback from, and built solutions for, users and customers
+                        - Performed thorough testing to identify and resolve any frontend bugs or issues. The outcome was a stable and reliable web application with an enhanced user experience.
+                    </p>
+                    <p>
+                        - Ensured the web application was optimized for mobile devices by implementing responsive design principles and conducting cross-browser compatibility testing. The outcome was a seamless experience for users across different devices.
                     </p>
                     <p>
                         - Collaborated with senior designers and cross-functional teams to develop and implement design systems, improving design and development efficiency by 20%
                     </p>
                     <p>
-                        - Assisted in designing and developing wireframes, prototypes, and high-fidelity designs for web and mobile applications, contributing to a 15% increase in user satisfaction
-                    </p>
-                    <p>
-                        - Contributed to design reviews and presented design solutions to stakeholders, gaining valuable experience in design critique and presentation skills
-                    </p>
-                    <p>
-                        - Gained proficiency in design tools such as Sketch, Figma, and Adobe Creative Suite.
+                        - Stayed updated with the latest frontend technologies, trends, and best practices. Actively participated in learning opportunities and leveraged new knowledge to enhance my skills as a frontend developer.
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2020 - 2020</p>
-                    <h5>Product Designer Intern<span> - Side Hustle</span></h5>
+                    <p class="tl-duration">Jan 2021 - Mar 2021</p>
+                    <h5>Frontend Developer Intern<span> - Side Hustle</span></h5>
                     <p>
-                        - Improved functionality and usability for the target audience, resulting in a 15% increase in conversions.
+                        - Collaborated with the design team to bring the user interface (UI) designs to life. Translated design mockups into responsive and visually appealing UI components using HTML, CSS, and JavaScript.
                     </p>
                     <p>
-                        - Closely collaborated with project managers, developers and UX researchers to identify and quickly address problems.
+                        - Implemented key frontend functionalities of the e-commerce application, such as product listing, search functionality, shopping cart, and checkout process. Developed interactive and intuitive user interfaces that enhanced the overall user experience.
                     </p>
                     <p>
-                        - Contributed to creating an online community with a UX modelled after industry-leading community sites, combining social proof with e-commerce conversion.
+                        - Actively participated in team discussions and problem-solving sessions, providing valuable insights and suggestions to improve the application's functionality and user experience. Collaborated with backend developers to integrate frontend and backend components.
                     </p>
                     <p>
-                        - Gathered requirements from clients and conducted focus groups.
+                        - Ensured that the e-commerce application was fully responsive, allowing users to access and navigate the platform seamlessly across different devices and screen sizes. Utilized media queries and responsive design techniques to optimize the UI for mobile, tablet, and desktop views.
+                    </p>
+                    <p>
+                        - Contributed to the optimization of the application's performance by implementing best practices such as code minification, image optimization, and lazy loading. Ensured efficient loading times and smooth user interactions.
                     </p>
                 </div>
             </div>
@@ -332,7 +329,7 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="https://www.linkedin.com/in/otitodilichukwu/" target="_blank">
+                                <a href="https://www.linkedin.com/in/otitodilichukwu-nzekwesi/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                                 <a href="https://github.com/Titofrancis" target="_blank">
